# conan-march-2026

./: .gitignore  README.md
Day1/: README.md
Day1/HelloCppWithStaticLib/: CMakeLists.txt
Day1/hello/: CMakeLists.txt
Day1/hello/inc/: hello.h
Day1/hello/src/: hello.cpp  main.cpp
Day1/mysql-cpp-demo/: CMakeLists.txt
Day1/mysql-cpp-demo/src/: main.cpp
Day2/: README.md
Day2/ConanHelloWorld/: CMakeLists.txt  main.cpp
Day2/HelloCppWithDyanmicLib/: CMakeLists.txt
Day3/: README.md
Day3/qt-widget-application/: CMakeLists.txt  MyDlg.cpp  MyDlg.h  conanfile.py  main.cpp
Day3/transitive-dependency/: CMakeLists.txt  conanfile.txt  graph.html  graph.json
Day4/: README.md
Day4/conan-profiles/: release-profile
Day4/diamond-dependency/: build.sh  cleanup.sh  conanfile.py  conanws.yml
Day4/diamond-dependency/libA/: conanfile.py
Day4/diamond-dependency/libA/src/: libA.cpp
Day4/diamond-dependency/libB/: conanfile.py
Day4/diamond-dependency/libB/inc/: libB.h
Day4/diamond-dependency/libB/src/: libB.cpp
Day4/diamond-dependency/logger/v1/: conanfile.py
Day4/diamond-dependency/logger/v1/src/: logger.cpp
Day4/diamond-dependency/logger/v2/: CMakeLists.txt  conanfile.py
Day4/diamond-dependency/logger/v2/src/: logger.cpp
Day4/simple-cpp-app/src/: main.cpp
Day5/: README.md
Day5/conan-workspace/: CMakeLists.txt  conanfile.py
Day5/conan-workspace/libA/: CMakeLists.txt  conanfile.py
Day5/conan-workspace/libA/inc/: libA.h
Day5/conan-workspace/libB/: CMakeLists.txt  conanfile.py
Day5/conan-workspace/logger/v1/: CMakeLists.txt  conanfile.py
Day5/conan-workspace/logger/v1/inc/: logger.h
Day5/conan-workspace/logger/v2/: conanfile.py
Day5/conan-workspace/src/: main.cpp
